--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -8,16 +8,16 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="ProyectoDiciembre" connectionString="Server=DESKTOP-H4F0QT4;Database=ProyectoDiciembre;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=True;" providerName="System.Data.SqlCient">
+    </add>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <connectionString>
-    <add name="Escuela" connectionString="Server=DESKTOP-H4F0QT4;Database=Escuela;TrustServerCertificate=True;" providerName="System.Data.SqlCient">
-    </add>
-  </connectionString>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
